add post message, fix message create dto